--- a/package.json
+++ b/package.json
@@ -56,9 +56,12 @@
     "grunt-exec": "*",
     "grunt-mkdir": "*",
     "grunt-template": "^0.2.3",
+    "grunt-webpack": "^1.0.11",
     "handlebars": "3.0.3",
     "intern": "^3.0.0",
     "md5-file": "^2.0.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
