--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "async": "1.0.0",
+    "babel-loader": "^6.2.1",
     "download": "4.4.1",
     "grunt": "~0.4.2",
     "grunt-auto-install": "*",
