--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "modules": {
       "ia32": [
         "https://github.com/opersys/jsbinder/releases/download/0.3.1/jsbinder-0.3.1_ia32.tar.gz",
-        "https://github.com/fdgonthier/node-abstractsocket/releases/download/v1.1.0/abstract-socket-1.1.0_ia32.tar.gz"
+        "https://github.com/fdgonthier/node-abstractsocket/releases/download/v2.0.0/abstract-socket-2.0.0_ia32.tar.gz"
       ],
       "arm": [
         "https://github.com/opersys/jsbinder/releases/download/0.3.1/jsbinder-0.3.1_arm.tar.gz",
-        "https://github.com/fdgonthier/node-abstractsocket/releases/download/v1.1.0/abstract-socket-1.1.0_arm.tar.gz"
+        "https://github.com/fdgonthier/node-abstractsocket/releases/download/v2.0.0/abstract-socket-2.0.0_arm.tar.gz"
       ]
     },
     "misc": {
@@ -27,39 +27,40 @@
       ]
     }
   },
+  "optionalDependencies": {
+    "bufferutil": "1.1.x",
+    "utf-8-validate": "1.1.x"
+  },
   "dependencies": {
     "async": "^1.5.0",
     "debug": "^2.2.0",
     "express": "^4.12.3",
+    "glob2base": "0.0.12",
     "line-read": "^1.0.1",
     "longjohn": "^0.2.9",
     "readline-stream": "^1.0.1",
     "signals": "^1.0.0",
     "underscore": "^1.8.3",
     "uuid": "^2.0.1",
-    "ws": "^0.7.1",
+    "ws": "^1.1",
     "yargs": "3.9.1"
   },
   "devDependencies": {
     "async": "1.0.0",
     "babel-loader": "^6.2.1",
     "download": "4.4.1",
-    "grunt": "~0.4.2",
+    "grunt": "0.4.2",
     "grunt-auto-install": "*",
     "grunt-babel": "^5.0.3",
-    "grunt-bower": "*",
-    "grunt-bower-concat": "*",
-    "grunt-bower-requirejs": "*",
     "grunt-chmod": "*",
     "grunt-contrib-compress": "*",
     "grunt-contrib-copy": "*",
     "grunt-contrib-handlebars": "0.10.2",
     "grunt-exec": "*",
     "grunt-mkdir": "*",
-    "grunt-template": "^0.2.3",
+    "grunt-template": "0.2.2",
     "grunt-webpack": "^1.0.11",
     "handlebars": "3.0.3",
-    "intern": "^3.0.0",
     "md5-file": "^2.0.4",
     "underscore": "^1.8.3",
     "webpack": "^1.12.9",
