--- a/package.json
+++ b/package.json
@@ -18,17 +18,6 @@
       "arm64": [
         "https://github.com/fdgonthier/node-abstractsocket/releases/download/v2.0.0/abstract-socket-2.0.0_arm64.tar.gz"
       ]
-    },
-    "misc": {
-      "ia32": [
-        "https://github.com/fdgonthier/nodejs-mobile/releases/download/v8.6.0-pre/node_ia32.tar.gz"
-      ],
-      "arm": [
-        "https://github.com/fdgonthier/nodejs-mobile/releases/download/v8.6.0-pre/node_arm.tar.gz"
-      ],
-      "arm64": [
-        "https://github.com/fdgonthier/nodejs-mobile/releases/download/v8.6.0-pre/node_arm64.tar.gz"
-      ]
     }
   },
   "optionalDependencies": {
@@ -52,8 +41,8 @@
   "devDependencies": {
     "async": "1.0.0",
     "babel-loader": "^6.2.1",
-    "download": "4.4.1",
-    "grunt": "0.4.2",
+    "got": "^8.0.2",
+    "grunt": "^1.0.1",
     "grunt-auto-install": "*",
     "grunt-babel": "^5.0.3",
     "grunt-chmod": "*",
@@ -66,6 +55,7 @@
     "grunt-webpack": "^1.0.11",
     "handlebars": "3.0.3",
     "md5-file": "^2.0.4",
+    "tarball-extract": "0.0.6",
     "underscore": "^1.8.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
